# docs/swagger.json
@@ -251,6 +251,52 @@
                 }
             }
         },
+      "/api/contacts/{id}/addresses": {
+        "post": {
+          "security": [
+            {
+              "JWT": []
+            }
+          ],
+          "description": "create contact address",
+          "consumes": [
+            "application/json"
+          ],
+          "produces": [
+            "application/json"
+          ],
+          "tags": [
+            "contacts"
+          ],
+          "summary": "Create contact address",
+          "parameters": [
+            {
+              "type": "integer",
+              "description": "contact id",
+              "name": "id",
+              "in": "path",
+              "required": true
+            },
+            {
+              "description": "address",
+              "name": "address",
+              "in": "body",
+              "required": true,
+              "schema": {
+                "$ref": "#/definitions/db.Address"
+              }
+            }
+          ],
+          "responses": {
+            "201": {
+              "description": "Created",
+              "schema": {
+                "$ref": "#/definitions/db.Address"
+              }
+            }
+          }
+        }
+      },
         "/api/contacts/{id}/save": {
             "post": {
                 "security": [
@@ -330,6 +376,49 @@
                         }
                     }
                 ],
+              "responses": {
+                "200": {
+                  "description": "OK"
+                }
+              }
+            }
+        },
+      "/api/contacts/{id}/visibility": {
+        "put": {
+          "security": [
+            {
+              "JWT": []
+            }
+          ],
+          "description": "update contact visibility",
+          "consumes": [
+            "application/json"
+          ],
+          "produces": [
+            "application/json"
+          ],
+          "tags": [
+            "contacts"
+          ],
+          "summary": "Update contact visibility",
+          "parameters": [
+            {
+              "type": "integer",
+              "description": "contact id",
+              "name": "id",
+              "in": "path",
+              "required": true
+            },
+            {
+              "description": "visibility",
+              "name": "account",
+              "in": "body",
+              "required": true,
+              "schema": {
+                "$ref": "#/definitions/transport.UpdateContactVisibilityRequest"
+              }
+            }
+          ],
                 "responses": {
                     "200": {
                         "description": "OK"
@@ -402,6 +491,34 @@
                 }
             }
         },
+      "/api/me/contacts": {
+        "get": {
+          "security": [
+            {
+              "JWT": []
+            }
+          ],
+          "description": "get my contacts",
+          "consumes": [
+            "application/json"
+          ],
+          "produces": [
+            "application/json"
+          ],
+          "tags": [
+            "contacts"
+          ],
+          "summary": "List my contacts",
+          "responses": {
+            "200": {
+              "description": "OK",
+              "schema": {
+                "$ref": "#/definitions/db.ContactsPage"
+              }
+            }
+          }
+        }
+      },
         "/api/otp": {
             "post": {
                 "description": "send OTP",
@@ -686,6 +803,9 @@
                 "avatar": {
                     "type": "string"
                 },
+              "country_code": {
+                "type": "string"
+                },
                 "created_at": {
                     "type": "string"
                 },
@@ -698,9 +818,6 @@
                 "id": {
                     "type": "integer"
                 },
-              "is_published": {
-                "type": "boolean"
-              },
                 "name": {
                     "type": "string"
                 },
@@ -733,6 +850,12 @@
                 },
                 "views_amount": {
                     "type": "integer"
+                },
+              "visibility": {
+                "$ref": "#/definitions/db.ContactVisibility"
+              },
+              "website": {
+                "type": "string"
                 }
             }
         },
@@ -751,9 +874,6 @@
           "id": {
             "type": "integer"
           },
-          "is_published": {
-            "type": "boolean"
-          },
           "name": {
             "type": "string"
           },
@@ -765,8 +885,24 @@
           },
           "views_amount": {
             "type": "integer"
+          },
+          "visibility": {
+            "$ref": "#/definitions/db.ContactVisibility"
           }
         }
+      },
+      "db.ContactVisibility": {
+        "type": "string",
+        "enum": [
+          "public",
+          "private",
+          "shared_link"
+        ],
+        "x-enum-varnames": [
+          "ContactVisibilityPublic",
+          "ContactVisibilityPrivate",
+          "ContactVisibilitySharedLink"
+        ]
       },
         "db.ContactsPage": {
             "type": "object",
@@ -836,11 +972,14 @@
                 "created_at": {
                     "type": "string"
                 },
+              "deleted_at": {
+                "type": "string"
+                },
                 "email": {
                     "type": "string"
                 },
-                "email_verified": {
-                    "type": "boolean"
+              "email_verified_at": {
+                "type": "string"
                 },
                 "id": {
                     "type": "integer"
@@ -898,6 +1037,19 @@
                 }
             }
         },
+      "transport.UpdateContactVisibilityRequest": {
+        "type": "object",
+        "properties": {
+          "visibility": {
+            "allOf": [
+              {
+                "$ref": "#/definitions/db.ContactVisibility"
+              }
+            ],
+            "example": "public"
+          }
+        }
+      },
         "transport.VerifyOTPRequest": {
             "type": "object",
             "properties": {
